--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 	<title>Stone, Paper, Scissor</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" scr="script.js"></script>
 </head>
 <body>
 	<h1>Stone, Paper, Scissor</h1>
+	<div class="container">
+		<h2>Player</h2>
+		<p>Pick Your Choice</p>
+		<div class="rows">
+			<div class="col-md-4"><img src="stone.png" alt="Stone"></div>			
+			<div class="col-md-4"><img src="paper.png" alt="Paper"></div>			
+			<div class="col-md-4"><img src="scissor.svg" alt="Scissor"></div>
+		</div>
+	</div>
 </body>
 </html>
