--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 	<title>Stone, Paper, Scissor</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" scr="script.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+	<script scr="script.js"></script>
 </head>
 <body>
-	<h1>Stone, Paper, Scissor</h1>
+	<header>
+		<h1 class="text-center">Stone, Paper, Scissor</h1>
+	</header>
 	<div class="container">
-		<h2>Player</h2>
-		<p>Pick Your Choice</p>
+		<h2 class="text-center">Player</h2>
+		<p class="text-center">Pick Your Choice</p>
 		<div class="rows">
-			<div class="col-md-4"><img src="stone.png" alt="Stone"></div>			
-			<div class="col-md-4"><img src="paper.png" alt="Paper"></div>			
-			<div class="col-md-4"><img src="scissor.svg" alt="Scissor"></div>
+			<div class="col-md-4"><a role="button" id="stone"><img src="stone.png" alt="Stone"></a></div>			
+			<div class="col-md-4"><a role="button" id="paper"><img src="paper.png" alt="Paper"></a></div>			
+			<div class="col-md-4"><a role="button" id="scissor"><img src="scissor.svg" alt="Scissor"></a></div>
 		</div>
 	</div>
 </body>
