--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Stone, Paper, Scissor</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -12,19 +14,19 @@
 		<h1 class="text-center">Stone, Paper, Scissor</h1>
 	</header>
 	<div class="rows">
-		<div class="col-md-12" id="pWrapper">
-			<div class="player container">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="pWrapper">
+			<div class="player">
 				<h2 class="text-center">Player <span id="playerScore"></span></h2>
 				<p class="text-center">Pick Your Choice</p>
 				<div class="rows">
-					<div class="stone text-center col-md-4"><a role="button" id="stone" class="text-center"><img src="stone.png" alt="Stone"></a></div>			
-					<div class="paper text-center col-md-4"><a role="button" id="paper" class="text-center"><img src="paper.png" alt="Paper"></a></div>			
-					<div class="scissor text-center col-md-4"><a role="button" id="scissor" class="text-center"><img src="scissor.svg" alt="Scissor"></a></div>
+					<div class="stone text-center col-xs-4 col-sm-4 col-md-4 col-lg-4"><a role="button" id="stone" class="text-center"><img src="stone.png" alt="Stone"></a></div>			
+					<div class="paper text-center col-xs-4 col-sm-4 col-md-4 col-lg-4"><a role="button" id="paper" class="text-center"><img src="paper.png" alt="Paper"></a></div>			
+					<div class="scissor text-center col-xs-4 col-sm-4 col-md-4 col-lg-4"><a role="button" id="scissor" class="text-center"><img src="scissor.svg" alt="Scissor"></a></div>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6">
-			<div class="computer container">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="computer">
 				<h2 class="text-center">Computer <span id="computerScore"></h2>
 				<p class="text-center">Computer's Choice</p>
 				<div class="rows">
